--- a/ArtinRefactor/src/app/app.component.scss
+++ b/ArtinRefactor/src/app/app.component.scss
@@ -1,1 +1,9 @@
-stlyes for app
+@font-face {font-family: b; src: url(../assets/Fonts/Bangers/Bangers-Regular.ttf);}
+@font-face {font-family: c; src: url(../assets/Fonts/Comic_Neue/ComicNeue-Regular.ttf);}
+@font-face {font-family: f; src: url(../assets/Fonts/Fontdiner_Swanky/FontdinerSwanky-Regular.ttf);}
+@font-face {font-family: j; src: url(../assets/Fonts/Joti_One/JotiOne-Regular.ttf);}
+@font-face {font-family: k; src: url(../assets/Fonts/Kranky/Kranky-Regular.ttf);}
+@font-face {font-family: s; src: url(../assets/Fonts/Slackey/Slackey-Regular.ttf);}
+@font-face {font-family: sn; src: url(../assets/Fonts/Snowburst_One/SnowburstOne-Regular.ttf);}
+@font-face {font-family: p; src: url(../assets/Fonts/Pacifico-Light.ttf);}
+@font-face {font-family: m; src: url(../assets/Fonts/Montserrat/Montserrat-Light.ttf);}
