--- a/ArtinRefactor/src/app/feature/login/login.component.html
+++ b/ArtinRefactor/src/app/feature/login/login.component.html
@@ -1,41 +1,57 @@
-<div class="card-container">
-    <div class="login-container">
-        <mat-card class="content-container mat-elevation-z8">
-            <mat-card-header>
-                <mat-card-title>Login</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-                <form [formGroup]="loginForm" loginForm="ngForm">
-                    <div>
-                        <mat-form-field appearance="legacy" class="form-field">
-                            <mat-label>Username</mat-label>
-                            <input matInput formControlName="username" placeholder="Enter Username" required>
-                            <mat-error *ngIf="loginForm.controls.username.errors?.required && loginForm.controls.username.dirty">
+<div class="titlepageflex">
+    <div class="artin-titlepage">
+        <div class="loginstyle1">
+            <h1>ArtIn</h1>
+        </div>
+        <div>
+            <h2>Plan your comics</h2>
+        </div>
+    </div>
+
+    <div class="card-container">
+        <div class="login-container">
+            <mat-card class="content-container mat-elevation-z8">
+                <mat-card-header class="comic-loginbox">
+                    <mat-card-title>Login</mat-card-title>
+                </mat-card-header>
+
+                <mat-card-content>
+                    <form [formGroup]="loginForm" loginForm="ngForm">
+                        <div class="username-whole">
+                            <mat-form-field appearance="legacy" class="form-field user-form-field">
+                                <mat-label>Username</mat-label>
+                                <input matInput formControlName="username" placeholder="Enter Username" required>
+                            </mat-form-field>
+                            <mat-error
+                                *ngIf="loginForm.controls.username.errors?.required && loginForm.controls.username.dirty">
                                 Username is <strong>required</strong>
                             </mat-error>
-                        </mat-form-field>
-                    </div>
-
-                    <div>
-                        <mat-form-field appearance="legacy" class="form-field">
-                            <mat-label>Password</mat-label>
-                            <input matInput [type]="hide ? 'password' : 'text'"  formControlName="password" placeholder="Enter Password" required>
-                            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                            </button>
-                            <mat-error *ngIf="loginForm.controls.password.errors?.required && loginForm.controls.password.dirty">
+                        </div>
+                        <div class="password-whole">
+                            <mat-form-field appearance="legacy" class="form-field pass-form-field">
+                                <mat-label>Password</mat-label>
+                                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password"
+                                    placeholder="Enter Password" required>
+                            </mat-form-field>
+                            <mat-error
+                                *ngIf="loginForm.controls.password.errors?.required && loginForm.controls.password.dirty">
                                 Password is <strong>required</strong>
                             </mat-error>
-                        </mat-form-field>
+                            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                                [attr.aria-pressed]="hide">
+                                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                            </button>
+                        </div>
+                        <div class="button-container">
+                            <button [disabled]="loginForm.invalid" mat-raised-button color="primary"
+                                (click)="login()">Tap In</button>
+                        </div>
+                    </form>
+                    <div class="signUp-container">
+                        New User? <a mat-button [routerLink]="['/signup']" class="anchor-text">Sign Up</a>
                     </div>
-                    <div class="button-container">
-                        <button [disabled]="loginForm.invalid" mat-raised-button color="primary" (click)="login()">Tap In</button>
-                    </div>
-                </form>
-                <div class="signUp-container">
-                    New User? <a mat-button [routerLink]="['/signup']" class="anchor-text">Sign Up</a>
-                </div>
-            </mat-card-content>
-        </mat-card>
+                </mat-card-content>
+            </mat-card>
+        </div>
     </div>
 </div>
